@@ -109,6 +109,7 @@
 * Changes below here added in 4.0.0-beta.13
 * Upgrade JSSC Serial library to 2.9.2
 * Enforce 255 character limit for tag keys and values in validation
+* Remove custom el security expression hasDataSourcePermission()
 
 *Version 3.7.4*
 * Improve work item failure logging
